<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/lightBlack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/otp_sent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/color_primary"
            android:fontFamily="@font/rubiksemibold"
            android:textSize="@dimen/title_size2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/title_size1"
            android:fontFamily="@font/rubikregular"
            android:text="@string/we_will_send_you_an_otp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:fontFamily="@font/rubikregular"
            android:textSize="@dimen/title_size1"
            android:textColor="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textColor="@color/white"
                android:fontFamily="@font/rubikregular"
                android:textSize="@dimen/title_size1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/mobileInput"
                android:hint="8690354672"
                android:imeOptions="actionDone"
                android:background="@null"
                android:importantForAutofill="no"
                android:textColor="@color/white"
                android:fontFamily="@font/rubikregular"
                android:textSize="@dimen/title_size1"
                android:textColorHint="#758283"
                android:inputType="number"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"/>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/getOtpBtn"
                android:layout_margin="30dp"
                android:text="@string/get_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size1"
                android:fontFamily="@font/rubikregular"
                android:background="@drawable/button_back"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>
        


    </LinearLayout>

</ScrollView>